--- a/slideshowapp/pom.xml
+++ b/slideshowapp/pom.xml
@@ -6,7 +6,12 @@
     <version>1.0-SlideShow</version>
     <packaging>jar</packaging>
     <dependencies>
-          
+        <dependency>
+            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.13.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
